--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,8 @@
   "manifest_version": 2,
   "name": "Habersiz Kalma",
   "short_name": "Habersiz Kalma",
+  "version": "1.1",
+  "current_locale": "tr",
   "description": "Açtığınız her sekmede yeni bir haber ile karşılaşacak, Türkiye gündeminden habersiz kalmayacaksınız.",
   "author": "Deniz Çağın Demirci",
   "icons": {
@@ -14,6 +16,5 @@
   },
   "options_page": "options.html",
   "permissions": ["management", "storage", "http://*.ntv.com.tr/*"],
-  "update_url": "https://clients2.google.com/service/update2/crx",
-  "version": "1.1"
+  "update_url": "https://clients2.google.com/service/update2/crx"
 }
