--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,23 @@
   "manifest_version": 2,
   "name": "Habersiz Kalma",
   "short_name": "Habersiz Kalma",
-  "version": "1.2",
+  "version": "1.3",
   "current_locale": "tr",
   "description": "Açtığınız her sekmede yeni bir haber ile karşılaşacak, Türkiye gündeminden habersiz kalmayacaksınız.",
   "author": "Deniz Çağın Demirci",
   "icons": {
-    "128": "icon128.png",
     "16": "icon16.png",
-    "48": "icon48.png"
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "browser_action": {
+    "default_icon": "icon16.png"
   },
   "chrome_url_overrides": {
     "newtab": "index.html"
+  },
+  "background": {
+     "scripts": ["js/background.js"]
   },
   "options_page": "options.html",
   "permissions": ["management", "storage", "http://*.ntv.com.tr/*"],
