--- a/manifest.json
+++ b/manifest.json
@@ -2,25 +2,22 @@
   "manifest_version": 2,
   "name": "Habersiz Kalma",
   "short_name": "Habersiz Kalma",
-  "version": "1.3.1",
-  "current_locale": "tr",
+  "version": "2.0",
   "description": "Açtığınız her sekmede yeni bir haber ile karşılaşacak, Türkiye gündeminden habersiz kalmayacaksınız.",
   "author": "Deniz Çağın Demirci",
   "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
-  },
-  "browser_action": {
-    "default_icon": "icon16.png"
+    "16": "img/icon16.png",
+    "48": "img/icon48.png",
+    "128": "img/icon128.png"
   },
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
   "background": {
-     "scripts": ["js/background.js"]
+     "scripts": ["js/jquery.js", "js/getNews.js", "js/background.js"]
   },
+  "offline_enabled": true,
   "options_page": "options.html",
-  "permissions": ["management", "storage", "http://*.ntv.com.tr/*"],
+  "permissions": ["storage", "http://*.hurriyet.com.tr/*", "http://*.ntv.com.tr/*", "http://*.cnnturk.com/*", "http://*.bbci.co.uk/*"],
   "update_url": "https://clients2.google.com/service/update2/crx"
 }
