--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Habersiz Kalma",
-  "version": "3.0.2",
+  "version": "3.1",
   "description": "Açtığınız her sekmede yeni bir haber ile karşılaşacak, Türkiye gündeminden habersiz kalmayacaksınız.",
   "icons": {
     "16": "img/icon16.png",
@@ -9,14 +9,24 @@
     "128": "img/icon128.png"
   },
   "background": {
-     "scripts": ["js/jquery.min.js", "js/main.min.js", "js/update.min.js"]
+    "scripts": [
+      "js/jquery.min.js",
+      "js/app.min.js",
+      "js/background.min.js"
+    ]
   },
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
   "minimum_chrome_version": "20",
   "offline_enabled": true,
-  "permissions": ["storage", "http://*.hurriyet.com.tr/*", "http://*.ntv.com.tr/*", "http://*.cnnturk.com/*", "http://*.bbci.co.uk/*"],
+  "permissions": [
+    "storage",
+    "*://*.hurriyet.com.tr/*",
+    "*://*.ntv.com.tr/*",
+    "*://*.cnnturk.com/*",
+    "*://*.bbci.co.uk/*"
+  ],
   "short_name": "Habersiz Kalma",
   "update_url": "https://clients2.google.com/service/update2/crx"
 }
